Release Notes
=============
Date:   21/10/2025
Name:   Kenneth
Release:
1. Add sheet title to default to "Template" for export template features

Changes:
main.py

=============
Date:   20/10/2025
Name:   Kenneth
Release:
1. Changed DB directory to load from setup_start_files when opening gantt chart to prevent errors in executable
2. Added escape character for backslash when loading calendar view script
3. Update requirements.txt versioning and missing libraries

Changes:
ganttchart.py
main.py
requirements.txt
timetable.db

=============
Date:   08/10/2025
Name:   Kenneth
Release:
1. Added contingencies to remove the calendar view subprocess
2. Fixed issue with calendar view not loading the latest generated timetable
3. Changed DB directory to load from setup_start_files when opening gantt chart to prevent errors in executable

Changes:
calendar_view.py
ganttchart.py
main.py
ReleaseNotes.txt

=============
Date:   07/10/2025
Name:   June
Release:
1. accept PT FLUSH and RC=string

Changes:
windows\populate_db_from_schedule.py
ReleaseNotes.txt
=============
Date:   07/10/2025
Name:   Min Yang
Release:
1. Update grantt chart to have series and jobs details view

Changes:
main.py
windows\ganttchart.py
=============
Date:   07/10/2025
Name:   Kenneth
Release:
1. Resized window to display button

Changes:
main.py
ReleaseNotes.txt
=============
Date:   07/10/2025
Name:   Zhi Hui
Release:
1. fix ds unboundlocal error

Changes:
windows\bas_template_import.py
=============
Date:   03/10/2025
Name:   Zhi Hui
Release:
1. update build to executable for bas template import

Changes:
build_exe.py
en_core_web_sm (folder)
spacy (folder)
=============
Date:   02/10/2025
Name:   Zhi Hui
Release:
1. bas template import
2. added spacy to requirement.txt

Changes:
main.py
requirements.txt
windows\bas_template_import.py
=============
Date:   26/09/2025
Name:   June
Release:
1. add acceptable pt, additional scheduling instruction, Run_if_scheduled=Y extracted from remarks field

Changes: